@@ -13,6 +13,8 @@ use TestLib;
 
 use Test::More tests => 29;
 
+my $delay = 200_000; # 200ms
+
 my $tdir = tempdir (CLEANUP => 1);
 $PgCommon::confroot = $tdir;
 
@@ -266,11 +268,11 @@ my @pids;
 is (next_free_port, 5432, 'next_free_port is 5432');
 # open a localhost ipv4 socket
 push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -q0 -l 127.0.0.1 5432));
-usleep 50_000;
+usleep $delay;
 is (next_free_port, 5433, 'next_free_port detects localhost ipv4 socket');
 # open a wildcard ipv4 socket
 push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -q0 -l 5433));
-usleep 50_000;
+usleep $delay;
 is (next_free_port, 5434, 'next_free_port detects wildcard ipv4 socket');
 
 SKIP: {
@@ -279,11 +281,11 @@ SKIP: {
 
     # open a localhost ipv6 socket
     push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l ::1 5434));
-    usleep 50_000;
+    usleep $delay;
     is (next_free_port, 5435, 'next_free_port detects localhost ipv6 socket');
     # open a wildcard ipv6 socket
     push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l 5435));
-    usleep 50_000;
+    usleep $delay;
     is (next_free_port, 5436, 'next_free_port detects wildcard ipv6 socket');
 }
 
